register and login logout added

--- a/news/static/css/style.css
+++ b/news/static/css/style.css
@@ -328,7 +328,7 @@ span{
 }
 .form-comment>textarea{
     padding:10px;
-    width: 80%;
+    width: 100%;
     height: 40px;
 }
 
@@ -344,3 +344,35 @@ span{
     background-color: red;
 }
 
+
+
+/* sgin up form */
+.signup-form{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    height: 100%;
+}
+.signup-form>input{
+    font-size: 14px;
+    padding:10px;
+    border-radius: 20px;
+
+}
+.signup-form>button{
+    font-size: 20px;
+    border-radius: 20px;
+    padding:5px;
+    background-color: #ee5050;
+    color:white;
+    margin-bottom: 10px;
+    border:none;
+}
+.signup-form>button:hover{
+    background-color: red;
+}
+.form-addnews>h2{
+    text-align: center;
+    font-family: cursive;
+    font-size: 30px;
+}
