--- a/news/templates/news/news_detail.html
+++ b/news/templates/news/news_detail.html
@@ -1,48 +1,50 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 {% block title %}
     HOME
 {% endblock title %}
-
-{% block body  %}
+{% block body %}
     <div class="container">
-            <div class="title-nw">
-                <h4>{{ news_detail.title }}</h4>
-            </div>
-            <div class="news-body">
-                <p>{{ news_detail.body }}</p>
-            </div>
-            <div class="author-dt">
-                <p>Author: {{ news_detail.author }}</p>
-                <p>{{ news_detail.created_at }}</p>
-            </div>
+        <div class="title-nw">
+            <h4>{{ news_detail.title }}</h4>
+        </div>
+        <div class="news-body">
+            <p>{{ news_detail.body }}</p>
+        </div>
+        <div class="author-dt">
+            <p>Author: {{ news_detail.author }}</p>
+            <p>{{ news_detail.created_at }}</p>
+        </div>
     </div>
-    <div class="line-cm"></div>
+
     <div class="comments">
-    {% for i in news_detail.comments.all %}
-        <div class="card-comment">
-            <div class="profile">
-                <div class="avatar"></div>
-                <div class="name">
-                    <h5>{{ i.post.author }}</h5>
+        {% if user.is_authenticated %}
+            <div class="add-comment">
+                <form class="form-comment" action="{% url '' %}" method="POST">
+                    {% csrf_token %}
+                    <textarea style="width: 100%" placeholder="add-comment...." name="body" cols="40" rows="10" required="" aria-invalid="true" id="id_body"></textarea>
+                    <button class="bt-comment" type="submit">ADD</button>
+                </form>
+            </div>
+            <div class="line-cm"></div>
+        {% else %}
+            <h3>Before you write a comment, you need to register</h3>
+        {% endif %}
+
+        {% for comment in news_detail.comments.all %}
+            <div class="card-comment">
+                <div class="profile">
+                    <div class="avatar"></div>
+                    <div class="name">
+                        <h5>{{ comment.author }}</h5>
+                    </div>
+                </div>
+                <div class="body">
+                    <p>{{ comment.content }}</p>
+                </div>
+                <div class="time">
+                    {{ comment.created_at }}
                 </div>
             </div>
-            <div class="body">
-                         <p>{{ i.body }}</p>
-            </div>
-            <div class="time">
-                {{ i.created_at }}
-            </div>
-        </div>
-
-    {% endfor %}
-        <div class="form-comment">
-            <form class="form-comment" method="POST" action="{% url 'post_comment' post_id=news_detail.id %}">
-                {% csrf_token %}
-                <textarea placeholder="add-comment...." name="body" cols="40" rows="10" required="" aria-invalid="true" id="id_body"></textarea>
-                <button class="bt-comment" type="submit">ADD</button>
-            </form>
-        </div>
+        {% endfor %}
     </div>
-
-
 {% endblock body %}
