--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,6 +8,7 @@
             <input placeholder="username" type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username">
             <input placeholder="password" type="password" name="password" autocomplete="current-password" required="" id="id_password">
             <button type="submit">Login</button>
+             <a style="text-decoration: none" href="{% url 'sign-up' %}">if you don't have an account ?</a>
       </form>
     </div>
 {% endblock %}
