'count view news' added

--- a/news/templates/news/news_detail.html
+++ b/news/templates/news/news_detail.html
@@ -10,6 +10,7 @@
         <div class="news-body">
             <p>{{ news_detail.body }}</p>
         </div>
+        {{ news_detail.view }}
         <div class="author-dt">
             <p>Author: {{ news_detail.author }}</p>
             <p>{{ news_detail.created_at }}</p>
