--- a/news/static/css/style.css
+++ b/news/static/css/style.css
@@ -225,13 +225,13 @@ span{
 }
 .title-nw>h4{
     font-size: 22px;
-    text-align: center;
+    /*text-align: center;*/
     text-transform: uppercase;
 }
 .news-body>p{
     margin-top: 10px;
     text-transform: capitalize;
-    line-height: 1.7;
+    line-height: 1.8;
     letter-spacing: 2px;
     font-size: 18px;
 }
@@ -245,7 +245,7 @@ span{
 
 }
 .line-cm{
-    width: 80%;
+    width: 100%;
     height: 2px;
     background-color: #9999;
     margin: 2px auto;
@@ -253,7 +253,7 @@ span{
 }
 .comments{
     height: auto;
-    width: 80%;
+    width: 78%;
     margin: 0 auto;
 
 
